# umbrella

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  temperature.rs  weather.rs  weatherstack.rs
tests/: integration.rs
tests/data/: weatherstack.json
