[package]
name = "umbrella"
version = "0.2.3"
edition = "2021"
authors = ["John Arundel <john@bitfieldconsulting.com>"]
description = """
A simple weather client and CLI tool for the WeatherStack API.
"""
keywords = ["cli", "weather"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/umbrella"
homepage = "https://github.com/bitfield/umbrella"
repository = "https://github.com/bitfield/umbrella"
exclude = ["/.github/"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.22", features = ["derive", "env"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.215" }
serde_json = "1.0.133"
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.17"
http = "1.2.0"
httpmock = "0.8.2"
predicates = "3.1.3"
